--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/drawer": "^6.6.13",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/stack": "^6.3.27",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
@@ -19,7 +20,9 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-pager-view": "6.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
