--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.1"
   },
+  "overrides": {
+    "react-devtools-core": "~4.25.0"
+ },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
