--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "overrides": {
     "react-devtools-core": "~4.25.0"
- },
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
