--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^9.1.1",
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "@expo/metro-runtime": "~3.1.3",
+    "expo-notifications": "~0.27.7"
   },
   "overrides": {
     "react-devtools-core": "~4.25.0"
