--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
     "@expo/metro-runtime": "~3.1.3",
-    "expo-notifications": "~0.27.7"
+    "expo-notifications": "~0.27.7",
+    "expo-device": "~5.9.4",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "overrides": {
     "react-devtools-core": "~4.25.0"
