--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/drawer": "^6.6.13",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/stack": "^6.3.27",
     "@reduxjs/toolkit": "^2.2.3",
-    "expo": "~50.0.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.2",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.1.1",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3",
-    "expo-notifications": "~0.27.7",
-    "expo-device": "~5.9.4",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.1"
   },
   "overrides": {
     "react-devtools-core": "~4.25.0"
